sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value j
    while (getValeur(j)<getValeur(i)){
                     ^AlgBubbleSort1:6: error: not found: value j
      echange(a, j)
                 ^AlgBubbleSort1:7: error: not found: value j
      echange(j, j+1)
              ^AlgBubbleSort1:7: error: not found: value j
      echange(j, j+1)
                 ^AlgBubbleSort1:8: error: not found: value j
      echange(j+1, a)
              ^AlgBubbleSort1:9: error: not found: value j
      j=j+1
      ^